--- a/hellocal/src/main/res/values/colors.xml
+++ b/hellocal/src/main/res/values/colors.xml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+100% — FF
+95% — F2
+90% — E6
+85% — D9
+80% — CC
+75% — BF
+70% — B3
+65% — A6
+60% — 99
+55% — 8C
+50% — 80
+45% — 73
+40% — 66
+35% — 59
+30% — 4D
+25% — 40
+20% — 33
+15% — 26
+10% — 1A
+5% — 0D
+0% — 00
+-->
 <resources>
-    <color name="colorPrimary">#595c60</color>
-    <color name="colorPrimaryDark">#595c60</color>
-    <color name="colorAccent">#595c60</color>
+    <color name="blank">#00000000</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="primary_text">#de000000</color>
     <color name="secondary_text">#89000000</color>
